<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedCenter</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="patientInfo">Patient Name/Number</string>
    <string name="search">Search</string>
    <string name="name">Patient Name</string>
    <string name="id">Patient ID</string>
    <string name="patient">Patient</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="notes">Notes</string>
    <string name="give_rx">Give Rx</string>
    <string name="write_rx">Write Rx</string>
    <string name="view_note">View Note</string>
    <string name="add_note">Add Note</string>
    <string name="fill_rx">Fill Rx</string>
    <string name="patientID1">123</string>
    <string name="patientID2">234</string>
    <string name="patientID3">345</string>
    <string name="patient_name1">Abraham Lincoln</string>
    <string name="patient_name2">John F Kennedy</string>
    <string name="patient_name3">Michael the Great</string>
    <string name="selected_patient_name">Barack Obama</string>
    <string name="selected_patient_id">id</string>
    <string name="selected_patient_rr">40</string>
    <string name="selected_patient_heart_rate">500</string>
    <string name="selected_patient_breathing_rate">18</string>
    <string name="selected_patient_prescription1">Penicillin</string>
    <string name="selected_patient_prescription_amt1">50 mg</string>
    <string name="selected_patient_prescription2">Penicillin</string>
    <string name="selected_patient_prescription_amt2">50 mg</string>
    <string name="selected_patient_prescription3">Penicillin</string>
    <string name="selected_patient_prescription_amt3">50 mg</string>
    <string name="notes1">Allergic to augmentin</string>
    <string name="notes2">Liquid diet only</string>
    <string name="notes3">Waiting for prescription</string>
    <string name="rate">Heartrate</string>
    <string name="oxygen">O2</string>
    <string name="bloodp">Blood Pressure</string>
    <string name="testPatient">Jim Bob</string>
    <string name="fakeRate"> 80 BPM</string>
    <string name="fakeO2">92%</string>
    <string name="fakeBP">110/80</string>
    <string name="writeRx">Write Rx</string>
    <string name="cancel">Cancel</string>
    <string name="fillList">Prescriptions to be Filled</string>
    <string name="prescription">Prescription</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="amount">Amount</string>
    <string name="antib1">Penicillin</string>
    <string name="antib2">Amoxycillin</string>
    <string name="antib3">Morphine</string>
    <string name="pillCount">30</string>
    <string name="fill">Fill Rx</string>
    <string name="testNotes">Jim Bob is set to be discharged as of 10/21 barring any further complications</string>
    <string name="doctor"> s</string>
    <string name="rxNotes">Take before bed with water on a full stomach</string>
    <string name="prescribe">Prescribe</string>
    <string name="prescriptionWriter">Prescribing Doctor:</string>
    <string name="patientName">Patient:</string>
    <string name="prescriptionName">Prescription:</string>
    <string name="pillNumber">Amount:</string>
    <string name="otherRx">Other Prescriptions:</string>
    <string name="filled">Fill</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="addV">Add Vitals</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_fill_prescript">FillPrescript</string>
    <string name="title_activity_nurse__doctor">Nurse_Doctor</string>
    <string name="title_activity_patient_main">PatientMain</string>
    <string name="title_activity_patient_info_final">PatientInfoFinal</string>
    <string name="title_activity_pharmacist_main_final">PharmacistMainFinal</string>
    <string name="title_activity_patient_vitals_final">PatientVitalsFinal</string>
    <string name="title_activity_prescription_submission">PrescriptionSubmission</string>
    <string name="title_activity_doctor_home">DoctorHome</string>
    <string name="title_activity_nurse_patient_info">NursePatientInfo</string>
    <string name="title_activity_nurse_home">NurseHome</string>
    <string name="title_activity_nurse_vitals">NurseVitals</string>
    <string name="title_activity_view_note">View_note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_note">Add_note</string>

</resources>
