<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#000000" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/prescriptionWriter"
        android:textSize="20sp" 
        android:textColor = "#ffffff"/>

    <TextView
        android:id="@+id/patient_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/doctor"
        android:textColor = "#ffffff" />

    <TextView
        android:id="@+id/selected_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:text="@string/selected_patient_name"
        android:textColor = "#ffffff" />

    <TextView
        android:id="@+id/selected_patient_prescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView02"
        android:layout_centerHorizontal="true"
        android:text="@string/selected_patient_prescription1"
        android:textColor = "#ffffff" />

    <TextView
        android:id="@+id/selected_patient_prescription_amt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView03"
        android:layout_centerHorizontal="true"
        android:text="@string/pillCount"
        android:textColor = "#ffffff" />

    <Button
        android:id="@+id/b_ps_confirm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_alignRight="@+id/TextView02"
        android:layout_below="@+id/selected_patient_prescription_amt1"
        android:layout_marginTop="18dp"
        android:background="@drawable/corner"
        android:text="@string/fill" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_doctor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/patientName"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_patient_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/prescriptionName"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_patient_prescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/pillNumber"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b_reject"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_ps_confirm"
        android:layout_alignRight="@+id/b_ps_confirm"
        android:layout_below="@+id/b_ps_confirm"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner"
        android:text="@string/reject" />

    <Button
        android:id="@+id/b_cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_reject"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/b_reject"
        android:layout_marginBottom="14dp"
        android:background="@drawable/corner"
        android:text="@string/cancel" />

</RelativeLayout>