<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
		<TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="32dp"
	        android:layout_marginTop="33dp"
	        android:text="@string/prescriptionWriter"
	        android:textSize="20sp" />
	
	 	<TextView
	        android:id="@+id/TextView01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_below="@+id/textView2"
	        android:layout_marginTop="16dp"
	        android:text="@string/patientName"
	        android:textSize="20sp" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView1"
	        android:layout_below="@+id/textView1"
	        android:text="@string/doctor" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView01"
	        android:layout_below="@+id/TextView01"
	        android:text="@string/testPatient" />
	    
	    <TextView
	        android:id="@+id/TextView02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView3"
	        android:layout_below="@+id/textView3"
	        android:layout_marginTop="16dp"
	        android:text="@string/prescriptionName"
	        android:textSize="20sp" />

	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView02"
	        android:layout_below="@+id/TextView02"
	        android:inputType="text"
	        android:ems="10" >
	        
	     

	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/TextView03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editText1"
	        android:layout_centerVertical="true"
	        android:text="@string/pillNumber"
	        android:textSize="20sp" />

	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView03"
	        android:layout_below="@+id/TextView03"
	        android:ems="10"
	        android:inputType="number" />

	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editText2"
	        android:layout_alignRight="@+id/editText2"
	        android:layout_below="@+id/editText2"
	        android:layout_marginTop="38dp"
	        android:text="@string/confirm" />

	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/button1"
	        android:layout_alignRight="@+id/button1"
	        android:layout_below="@+id/button1"
	        android:text="@string/cancel" />

</RelativeLayout>
