<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/testPatient"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/oxygen" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/bloodp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeRate" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeO2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeBP" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeRate" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeO2" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeBP" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeRate" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeO2" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeBP" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/notes" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout2"
        android:layout_alignRight="@+id/tableLayout2"
        android:layout_below="@+id/textView28"
        android:text="@string/testNotes" />

    <TableLayout
        android:id="@+id/tableLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView29"
        android:layout_below="@+id/textView30" >

        <TableRow
            android:id="@+id/tableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView16"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/patient" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/prescription" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/amount" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/testPatient" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/antib1" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pillCount" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView22"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/testPatient" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/antib3" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pillCount" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView25"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/testPatient" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/antib3" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pillCount" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView29"
        android:layout_marginTop="76dp"
        android:text="@string/prescriptions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>