<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/testPatient"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/rate" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/oxygen" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/bloodp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeRate" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeO2" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeBP" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeRate" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeO2" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeBP" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeRate" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeO2" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fakeBP" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/notes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="23dp"
        android:text="@string/writeRx" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/button1"
        android:text="@string/addV" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:text="@string/cancel" />

</RelativeLayout>