<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <TextView
        android:id="@+id/tv_patientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/selected_patient_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_patientName"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/b_pv_viewNote"
        android:text="Temperature"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selected_patient_breathing_rate"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="39dp"
        android:text="Heart Rate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/selected_patient_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv3"
        android:layout_below="@+id/tv3"
        android:text="@string/selected_patient_heart_rate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/selected_patient_breathing_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv2"
        android:layout_below="@+id/tv2"
        android:text="@string/selected_patient_breathing_rate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selected_patient_heart_rate"
        android:layout_below="@+id/selected_patient_heart_rate"
        android:layout_marginTop="29dp"
        android:text="Respiration Rate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/selected_patient_rr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@+id/tv1"
        android:text="@string/selected_patient_rr"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/b_pv_viewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_patient_rr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/view_note" />

    <Button
        android:id="@+id/b_ps_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_pv_viewNote"
        android:layout_alignRight="@+id/b_pv_viewNote"
        android:layout_below="@+id/b_pv_viewNote"
        android:text="@string/logout" />

</RelativeLayout>